# apps/api/src/routers/blog/blog.py
@@ -6,7 +6,7 @@ from pydantic import BaseModel
 from src.controller.blog_manage import BlogManager
 from app_instance import app
 from src.type.blog_type import Blog, BlogCreate
-from src.type.type import ResponseModel
+from src.core.response import ok, fail
 
 
 # 创建博客 API 路由
@@ -35,9 +35,9 @@ async def create_blog(blog: BlogCreate, blog_manager: BlogManager = Depends(get_
     res = blog_manager.add_blog(blog)
     
     if res:
-        return ResponseModel(code=1, data={"id": res}, message="创建成功")
+        return ok(data={"id": res}, msg="创建成功")
     else:
-        return ResponseModel(code=0, data=None, message="创建失败")
+        return fail(msg="创建失败")
 
 # 获取指定博客
 @router.get("/{blog_id}")
@@ -55,11 +55,11 @@ async def get_blog(blog_id:int, blog_manager: BlogManager = Depends(get_blog_man
     logger.info(f'查找的结果-----{blog}')
     
     if not blog:
-        return ResponseModel(code=0, data=None, message="博客不存在")
+        return fail(msg="博客不存在")
 
     blog_dict = {item[0]: item[1] for item in blog}
 
-    return ResponseModel(code=1, data=blog_dict, message="获取成功")
+    return ok(data=blog_dict, msg="获取成功")
 
 # 分页获取博客
 @router.get("/")
@@ -81,7 +81,7 @@ async def get_blogs_paginated(
     """
     logger.info(f'分页参数：{page}--{pageSize}')
     blogs = blog_manager.get_blog_by_page(page, pageSize)
-    return ResponseModel(code=1, data=blogs, message="获取成功")
+    return ok(data=blogs, msg="获取成功")
 
 
 # 删除指定博客
@@ -97,6 +97,6 @@ async def delete_blog(blog_id: str, blog_manager: BlogManager = Depends(get_blog
         dict: 包含删除成功消息的字典
     """
     if not blog_manager.delete_blog(blog_id):
-        return ResponseModel(code=0, data=None, message="博客不存在")
-    return ResponseModel(code=1, data=None, message="删除成功")
+        return fail(msg="博客不存在")
+    return ok(data=None, msg="删除成功")
 
