# packages/contracts/openapi.json
@@ -398,34 +398,6 @@
         "title": "ResourceUpdateModel",
         "type": "object"
       },
-      "ResponseModel": {
-        "description": "统一的API接口返回数据模型\n\n该模型用于规范所有接口的返回格式，使得接口返回数据结构统一，便于前端解析和处理。\n\n属性：\n    code (int): 状态码，用于表示请求的执行结果。\n        * 0: 请求成功\n        * 其他值: 请求失败，具体含义由业务定义\n    data (any): 返回的数据，可以是任意类型，根据不同的接口返回不同的数据。\n    message (str): 描述信息，用于提供更详细的错误信息或成功提示。",
-        "properties": {
-          "code": {
-            "title": "Code",
-            "type": "integer"
-          },
-          "data": {
-            "anyOf": [
-              {},
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Data"
-          },
-          "message": {
-            "title": "Message",
-            "type": "string"
-          }
-        },
-        "required": [
-          "code",
-          "message"
-        ],
-        "title": "ResponseModel",
-        "type": "object"
-      },
       "RoleCreateModel": {
         "properties": {
           "code": {
@@ -857,9 +829,7 @@
           "200": {
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ResponseModel"
-                }
+                "schema": {}
               }
             },
             "description": "Successful Response"
