# packages/contracts/src/generated-api-types.ts
@@ -736,27 +736,6 @@ export interface components {
             /** Type */
             type: string | null;
         };
-        /**
-         * ResponseModel
-         * @description 统一的API接口返回数据模型
-         *
-         *     该模型用于规范所有接口的返回格式，使得接口返回数据结构统一，便于前端解析和处理。
-         *
-         *     属性：
-         *         code (int): 状态码，用于表示请求的执行结果。
-         *             * 0: 请求成功
-         *             * 其他值: 请求失败，具体含义由业务定义
-         *         data (any): 返回的数据，可以是任意类型，根据不同的接口返回不同的数据。
-         *         message (str): 描述信息，用于提供更详细的错误信息或成功提示。
-         */
-        ResponseModel: {
-            /** Code */
-            code: number;
-            /** Data */
-            data?: unknown | null;
-            /** Message */
-            message: string;
-        };
         /** RoleCreateModel */
         RoleCreateModel: {
             /** Code */
@@ -1045,7 +1024,7 @@ export interface operations {
                     [name: string]: unknown;
                 };
                 content: {
-                    "application/json": components["schemas"]["ResponseModel"];
+                    "application/json": unknown;
                 };
             };
             /** @description Validation Error */
